fixed align for explore-phuket.css

--- a/css/packages.explore-phuket.css
+++ b/css/packages.explore-phuket.css
@@ -1,5 +1,5 @@
 .explore-phuket {
-  margin: 100px 0;
+  margin: 100px auto;
   width: 100%;
 }
 .explore__header {
